# ptouch-bt

./: pyproject.toml
.github/workflows/: ci.yml
scripts/: ptouch-print-bt  ptouch-print-image-bt  ptouch-print-test  ptouch-status
src/ptouch_bt/: __init__.py  client.py  media.py  printer.py  rfcomm.py  status.py
src/ptouch_bt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ptouch_bt/cli/: __init__.py  common.py  main.py  print.py  print_image.py  print_test.py  print_text.py  status.py
tests/: test_cli.py  test_protocol.py
